; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_jail.c_prison_ischild.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_jail.c_prison_ischild.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.prison = type { %struct.prison* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @prison_ischild(%struct.prison* %0, %struct.prison* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.prison*, align 8
  %5 = alloca %struct.prison*, align 8
  store %struct.prison* %0, %struct.prison** %4, align 8
  store %struct.prison* %1, %struct.prison** %5, align 8
  %6 = load %struct.prison*, %struct.prison** %5, align 8
  %7 = getelementptr inbounds %struct.prison, %struct.prison* %6, i32 0, i32 0
  %8 = load %struct.prison*, %struct.prison** %7, align 8
  store %struct.prison* %8, %struct.prison** %5, align 8
  br label %9

9:                                                ; preds = %18, %2
  %10 = load %struct.prison*, %struct.prison** %5, align 8
  %11 = icmp ne %struct.prison* %10, null
  br i1 %11, label %12, label %22

12:                                               ; preds = %9
  %13 = load %struct.prison*, %struct.prison** %4, align 8
  %14 = load %struct.prison*, %struct.prison** %5, align 8
  %15 = icmp eq %struct.prison* %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %12
  store i32 1, i32* %3, align 4
  br label %23

17:                                               ; preds = %12
  br label %18

18:                                               ; preds = %17
  %19 = load %struct.prison*, %struct.prison** %5, align 8
  %20 = getelementptr inbounds %struct.prison, %struct.prison* %19, i32 0, i32 0
  %21 = load %struct.prison*, %struct.prison** %20, align 8
  store %struct.prison* %21, %struct.prison** %5, align 8
  br label %9

22:                                               ; preds = %9
  store i32 0, i32* %3, align 4
  br label %23

23:                                               ; preds = %22, %16
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
